@@ -3,6 +3,7 @@
 - added: schema options `$.successful(function(response) {})`
 - added: `options.reconnectserver` to `WEBSOCKETCLIENT`
 - added: `req.snapshot(callback(err, request_body))`
+- added: a new command `CMD('reload_preferences')`
 
 - updated: `SchemaOptions` method `$.response([index/operation_name])`, e.g. `$.response('workflow.NAME')`
 - updated: snapshot `startscript.js.json` contains tabs instead of spaces
